# rust-android-libs

./: .gitignore  Cargo.toml
src/: lib.rs
