[package]
name = "rust-android-libs"
version = "0.1.0"
edition = "2021"

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[lib]
name = "rust_android_libs"
#crate_type = ["cdylib"]
# iOS and Android.
crate-type = ["staticlib", "cdylib"]

# build release opt
[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1